<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSearchWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/wordSearchHint"
            android:imeOptions="actionSearch"
            android:inputType="textAutoCorrect"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickRunQuery"
            android:paddingBottom="8dp"
            android:text="@string/buttonSearchCaption" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/queryStringCaption" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewQuery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/definitionCaption" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewDefinition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/definitionURLCaption" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/textViewDefinitionURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rawJsonCaption" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:id="@+id/textViewRawJson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />
    </ScrollView>

</LinearLayout>